--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,7 @@
               <h3 class="red">Software Propietario o Privado</h3>
               <!-- Cambiado a red -->
               <div class="white flex items-center">
-                $<span class="fs-large lh-1">Costes altos y con cláusulas</span>
+                $<span class="fs-large lh-1">Costos altos y con cláusulas</span>
               </div>
             </div>
             <div class="p-3 red-lightest fw-400 fs-s1 lh-5">
