--- a/index.html
+++ b/index.html
@@ -2421,7 +2421,7 @@
         <a href="https://facebook.com/username" target="_blank" class="floating-button facebook">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://linkedin.com/in/username" target="_blank" class="floating-button linkedin">
+        <a href="https://www.linkedin.com/in/cristian-david-lopez-gomez" target="_blank" class="floating-button linkedin">
             <i class="fab fa-linkedin-in"></i>
         </a>
     </div>
