--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=degithub.com/clikaz/vice-width, initial-scale=1.0" />
     <title>Clikaz</title>
     <link
       rel="stylesheet"
@@ -2164,7 +2164,7 @@
                   <a
                     href="#"
                     class="white opacity-70 no-underline hover-underline"
-                    >clikazworld@protonmail.com</a
+                    >fundadorclikaz@protonmail.com</a
                   >
                 </li>
               </ul>
