--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <div class="green-lightest fw-600 fs-m1 opacity-50">
               En Clikaz, optimizarás tu infraestructura, dominarás herramientas
               clave, mejorarás procesos y lograrás una ciberseguridad sólida y
-              confiable en todo momento.
+              confiable.
             </div>
             <a
               href="https://wa.me/573009027385?text=Hola,%20quiero%20saber%20más"
