--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
           >Servicios</a
         >
         <a
-          href="#Costos"
-          class="fs-s1 mx-2 py-2 white no-underline hover-underline nav-item"
-          >Costos</a
-        >
-        <a
           href="#Academia"
           class="fs-s1 mx-2 py-2 white no-underline hover-underline nav-item"
           >Academia</a
+        >
+        <a
+          href="#Costos"
+          class="fs-s1 mx-2 py-2 white no-underline hover-underline nav-item"
+          >Costos</a
         >
         <a
           href="#Fundación"
@@ -616,8 +616,8 @@
       }
     </style>
 
-    <!-- product options -->
-    <section class="textrestaurante">
+    <!-- Academy -->
+    <section class="textrestaurante" id="Academia">
       <div class="restaurante">
         <p>
           Clikaz Academy: Aprende a autogestionar tecnologías Open Source desde
@@ -681,7 +681,7 @@
       }
     </style>
 
-    <section class="py-l0 mt-0">
+    <section class="py-l0 mt-0" >
       <div class="flex flex-column md-flex-row md-w-80pc mx-auto">
         <div class="w-100pc md-w-50pc">
           <div
